<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/_designeactivity"
        tools:context=".MainActivity"
        android:theme="@style/Theme.AppCompat.NoActionBar">

        <TextView
            android:id="@+id/title_head"
            android:layout_width="204dp"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/theseasons_bold"
            android:gravity="center"
            android:text="@string/title_text"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextSizeCheck" />

        <TextView

            android:id="@+id/question_number"
            android:layout_width="199dp"
            android:layout_height="36dp"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/black"

            android:fontFamily="@font/theseasons_regular"
            android:gravity="center"
            android:text="@string/question_number"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_head" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="373dp"
            android:layout_height="194dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/landscape"
            app:cardCornerRadius="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/question_number">

            <TextView
                android:id="@+id/get_question"
                style="@style/questionTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textStyle="bold" />


        </ScrollView>

        <Button
            android:id="@+id/trueButton"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="100dp"
            android:backgroundTint="@color/cabeBlue"
            android:fontFamily="@font/theseasons_bold"
            android:text="@string/true_button"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/falseButton"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView" />

        <Button
            android:id="@+id/falseButton"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="48dp"
            android:backgroundTint="@color/cabeBlue"
            android:fontFamily="@font/theseasons_bold"
            android:text="@string/false_button"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView" />


        <Button
            android:id="@+id/prevvButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="12dp"
            android:backgroundTint="@color/cabeBlue"
            android:text="@string/previous_button"
            app:layout_constraintEnd_toStartOf="@+id/nextButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trueButton" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="30dp"

            android:layout_marginEnd="100dp"
            android:backgroundTint="@color/cabeBlue"
            android:text="@string/next_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/prevvButton"
            app:layout_constraintTop_toBottomOf="@+id/falseButton" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>